fixed the filter input to align center of page

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,8 +21,8 @@ body {
 	font-family: 'Oswald', sans-serif;
 
 	h1 {
-		margin-bottom: 0;
 		text-align: center;
+		margin-bottom: 20px;
 	}
 }
 
@@ -30,6 +30,7 @@ body {
 	margin-top: 20px;
 	width: 80vh;
 	max-width: 800px;
+	margin: 0 auto;
 
 	.filter {
 		width: 100%;
